fix bug for code block too big

--- a/themes/htmlStyle/source/css/partial/post.styl
+++ b/themes/htmlStyle/source/css/partial/post.styl
@@ -1,7 +1,8 @@
 .post-details
     width: 100%
-    margin: 0 10px
+    margin: 0 10px 0 10px
     max-width: 620px
+    inline-height: 1.8em
     a:not(.nonstyle)
         text-decoration: none
         color: #3A97FF
