--- a/themes/htmlStyle/source/css/style.styl
+++ b/themes/htmlStyle/source/css/style.styl
@@ -1,8 +1,12 @@
 body
-    font-size: 17px
+  font-size: 17px
 a
-    text-decoration: none
-    color: #222
+  text-decoration: none
+  color: #222
+pre code
+  white-space: pre
+  word-wrap: normal
+  font-size: 14px
 
 @import './partial/layout'
 @import './partial/header'
